# sai2-urdfreader

./: .gitignore  CMakeLists.txt  README.md
.github/actions/build-repo/: action.yml
.github/workflows/: build_and_test.yml  upload_artifact.yml  upload_artifact_on_schedule.yml  verify_PR.yml
examples/01-robot_parse/: main.cpp  pbot.urdf
examples/02-world_parse/: main.cpp
src/urdf/boost_replacement/: printf_console.cpp
src/urdf/urdfdom/urdf_parser/include/urdf_parser/: urdf_parser.h
src/urdf/urdfdom/urdf_parser/src/: check_urdf.cpp  graphics.cpp  joint.cpp  link.cpp  model.cpp  pose.cpp  twist.cpp  urdf_model_state.cpp  urdf_sensor.cpp  world.cpp
src/urdf/urdfdom/urdf_parser/test/: memtest.cpp
src/urdf/urdfdom_headers/urdf_exception/include/urdf_exception/: exception.h
src/urdf/urdfdom_headers/urdf_model/include/urdf_model/: color.h  joint.h  link.h  model.h  pose.h  twist.h
src/urdf/urdfdom_headers/urdf_model_state/include/urdf_model_state/: model_state.h
src/urdf/urdfdom_headers/urdf_sensor/include/urdf_sensor/: sensor.h
src/urdf/urdfdom_headers/urdf_world/include/urdf_world/: world.h
